# vault

./: README.md  biome.jsonc  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth_commands.rs  mod.rs  notes_commands.rs  password_commands.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/repositories/: mod.rs  notes_repository.rs  password_repository.rs
src-tauri/src/services/: auth_service.rs  mod.rs  notes_service.rs  password_service.rs
src/components/: Dashboard.tsx
src/components/auth/: AuthWrapper.tsx  LoginScreen.tsx  SetupScreen.tsx  VaultSelector.tsx
src/components/layout/: Layout.tsx  Navigation.tsx  index.ts
src/components/notes/: NoteEditor.tsx  NoteViewer.tsx  NotesList.tsx  NotesManager.tsx  index.ts
src/components/passwords/: PasswordForm.tsx  PasswordList.tsx  PasswordManager.tsx  PasswordViewer.tsx  index.ts
src/components/settings/: SettingsPage.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  error-boundary.tsx  form.tsx  label.tsx  loading-spinner.tsx  modal.tsx  navigation-menu.tsx  switch.tsx  table.tsx
src/contexts/: AuthContext.tsx  SettingsContext.tsx
src/hooks/: useAutoLock.ts  useKeyboardShortcuts.ts
src/lib/: clipboard.ts  tauri.ts
src/types/: index.ts
