[package]
name = "vault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = "0.3"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
ring = "0.16"
zeroize = "1.6"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0.0"
hex = "0.4.3"

